
2004/06/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: 
  - added Close-events
  - added ScrollWidget (which basically is a widget with optional vertical
    and horizontal scroll bars)
  - started working on GWEN_MessageBox


2004/06/23: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: added Button and a command event emitted by buttons (or menus later)
  This will allow me to create a Message class and a TextBrowser module
  tomorrow (hopefully).


2004/06/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: added VSlider, fixed many bugs in UI code etc. It is still slow
  but now it works ;-) I will have to optimize later...


2004/06/20: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- started working on a ncurses GUI which will be used by Libchipcard's setup
  tools and maybe by AqMoney2...


2004/06/17: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- crypt/nettransportssl, net/netransportsock: be more verbous about the reason
  why a connection could not be established
- crypt/nettransportssl: added function GWEN_NetTransportSSL_GenerateDhFile
  So now there finally is no need to access OpenSSL from outside Gwen just
  to make parts of Gwen (namely the SSL stuff) work.


2004/06/16: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/db: added function GWEN_DB_InsertGroup
- m4/os.m4: Define OS_POSIX if running on a POSIX system
- os/posix/libloader: 
  improved library loading. Now the following order is used when loading
  a library:
  1) the name given
  2) the name given plus ".so"
  3) the name given with prefix "lib"
  4) the name given with prefix "lib" and ".so"
  This now allows for files without ".so" to be loaded.
  

2004/06/11: Martin Preuss<martin@libchipcard.de>