@@ -1,3 +1,9 @@
+2004-06-24   Christian Stimming <stimming@tuhh.de>
+
+	* configure.ac, src/Makefile.am: Make the compilation of the UI
+	module conditional on whether ncurses is available. If it is not
+	there, then the whole GWEN_UI module will neither be compiled nor
+	installed.
 
 2004/06/24: Martin Preuss<martin@libchipcard.de>
 ------------------------------------------------
